[gd_scene load_steps=8 format=3 uid="uid://bhwtht6y2iakq"]

[ext_resource type="Texture2D" uid="uid://df4kea7rbmyxe" path="res://Sprites/HUD/Panels/MerchantPanel.svg" id="1_76bfk"]
[ext_resource type="Script" path="res://Scenes/merchant.gd" id="1_qtb1t"]
[ext_resource type="FontFile" uid="uid://dtjvkorh14rul" path="res://Fonts/Ubuntu-Bold.ttf" id="2_fhhc8"]
[ext_resource type="Texture2D" uid="uid://wdvhqpjceul4" path="res://Sprites/HUD/Soul.svg" id="3_olr4p"]
[ext_resource type="Texture2D" uid="uid://c58ncxeg4ltmg" path="res://Sprites/HUD/Upgrades/Product.svg" id="4_q7ndx"]
[ext_resource type="Texture2D" uid="uid://iy71gx7rfsox" path="res://Sprites/HUD/Upgrades/ArrowCount.svg" id="5_5opdx"]
[ext_resource type="Texture2D" uid="uid://b6uvt6y0e7c74" path="res://Sprites/HUD/Panels/Next.svg" id="7_ql08h"]

[node name="Merchant" type="Node2D"]
position = Vector2(0, -600)
script = ExtResource("1_qtb1t")

[node name="MerchantPanel" type="Sprite2D" parent="."]
position = Vector2(640, 360)
texture = ExtResource("1_76bfk")
metadata/_edit_lock_ = true

[node name="Name" type="Label" parent="."]
offset_left = 190.0
offset_top = 190.0
offset_right = 1090.0
offset_bottom = 230.0
theme_override_colors/font_color = Color(0.25098, 0.180392, 0.196078, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_fonts/font = ExtResource("2_fhhc8")
theme_override_font_sizes/font_size = 40
text = "Merchant"
horizontal_alignment = 1

[node name="Soul" type="Sprite2D" parent="."]
position = Vector2(270, 517)
scale = Vector2(0.8, 0.8)
texture = ExtResource("3_olr4p")

[node name="SoulText" type="Label" parent="."]
offset_left = 297.0
offset_top = 492.0
offset_right = 490.0
offset_bottom = 542.0
theme_override_fonts/font = ExtResource("2_fhhc8")
theme_override_font_sizes/font_size = 32
text = ": 1000"
vertical_alignment = 1

[node name="Products" type="Node2D" parent="."]

[node name="1" type="Sprite2D" parent="Products"]
position = Vector2(925, 368)
texture = ExtResource("4_q7ndx")
metadata/_edit_group_ = true

[node name="ArrowCount" type="Sprite2D" parent="Products/1"]
position = Vector2(1, -19)
texture = ExtResource("5_5opdx")

[node name="Button" type="Button" parent="Products/1"]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -75.0
offset_top = -77.5
offset_right = -75.0
offset_bottom = -77.5
grow_horizontal = 2
grow_vertical = 2

[node name="Price" type="Label" parent="Products/1"]
offset_left = -35.0
offset_top = 38.0
offset_right = 71.0
offset_bottom = 67.0
theme_override_fonts/font = ExtResource("2_fhhc8")
text = "20"
vertical_alignment = 1

[node name="Soul2" type="Sprite2D" parent="Products/1"]
position = Vector2(-53, 52)
scale = Vector2(0.4, 0.4)
texture = ExtResource("3_olr4p")

[node name="Next" type="Sprite2D" parent="."]
position = Vector2(975, 515)
texture = ExtResource("7_ql08h")

[node name="NextButton" type="Button" parent="Next"]
modulate = Color(1, 1, 1, 0)
offset_left = -74.0
offset_top = -27.0
offset_right = 66.0
offset_bottom = 28.0

[connection signal="pressed" from="Next/NextButton" to="." method="_on_next_button_pressed"]
